k-labs/lab03/path-based-ingress/kubia-rb-ingress-updated.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubiaredblue
  namespace: redblue
  annotations:
   #Comment the nginx class to use Azure http routing , uncomment addon-http-application-routing 
   kubernetes.io/ingress.class: "nginx"
   #kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    # Change to x to your student ID ( number ) 
  - host: rbstux.cognitoz.my
    http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: kubiablue
            port: 
              number: 80
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: kubiared
            port: 
              number: 80
